--- a/home.html
+++ b/home.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
+     <div class="loading">
+        <div class="loading-text">جاري التحميل...</div>
+    </div>
+
     <div class="container">
         <h1>أقوال مأثورة إسلامية</h1>
         <div id="quote-display">
@@ -17,8 +21,19 @@
             <p id="author"></p>
         </div>
         <button id="new-quote">اقتباس جديد</button>
+        <button id="copy-quote" class="copy-button">نسخ الاقتباس</button>
     </div>
 
+    <footer>
+        <div class="social-links">
+            <a href="https://instagram.com/_nr_512_" target="_blank">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://github.com/nr512" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
+        </div>
+    </footer>
     <script src="home.js"></script>
 </body>
 </html>
