--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amiri&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
      <div class="loading">
@@ -34,6 +35,14 @@
             </a>
         </div>
     </footer>
+    <div class="social-icons">
+    <a href="https://instagram.com/_nr_512_" target="_blank">
+        <i class="fab fa-instagram"></i>
+    </a>
+    <a href="https://github.com/nr512" target="_blank">
+        <i class="fab fa-github"></i>
+    </a>
+</div>
     <script src="home.js"></script>
 </body>
 </html>
